mdapi/objects/Agreement__c.object
<CustomObject>
    <description>Account accepted agreements.</description>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date when the agreement was made</inlineHelpText>
        <label>Acceptance Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>The account related to this agreement</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contracting_Entity__c</fullName>
        <label>Contracting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>StorageCraft IE</fullName>
                </value>
                <value>
                    <fullName>StorageCraft US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>When the agreement expires</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact which accepted the agreement</inlineHelpText>
        <label>Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Where the Agreement originated</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Portal-IE</fullName>
                </value>
                <value>
                    <fullName>Portal-US</fullName>
                </value>
                <value>
                    <fullName>Webstore-IE</fullName>
                </value>
                <value>
                    <fullName>Webstore-US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current status of the Agreement</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cash Only</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>What type of agreement is this?</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Master MSP</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <inlineHelpText>Version of the Agreement</inlineHelpText>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <displayFormat>STCA-{YYYY}{MM}{0000}</displayFormat>
        <label>Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>